# mcp_builder

./: README.md  pyproject.toml
scripts/: create_mcp_server.py
src/mcp_builder/: __init__.py  main.py
src/mcp_builder/ingestion/: downloader.py  models.py
src/mcp_builder/orchestration/: llm.py  models.py
src/mcp_builder/project/: __init__.py  generator.py
src/mcp_builder/scaffold/: __init__.py  manager.py
templates/mcp_server/: README.md.j2  pyproject.toml.j2
templates/mcp_server/server/: main.py.j2
tests/: test_heuristics.py  test_scaffold_manager.py
