[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-builder"
version = "0.1.0"
description = "Automated MCP server generator from API documentation"
authors = [{name = "Automation", email = "automation@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "jinja2>=3.1",
    "typer>=0.9",
    "pydantic>=2.6",
]

[project.optional-dependencies]
llm = [
    "openai>=1.14",
]

[project.scripts]
mcp-builder = "mcp_builder.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
